added new migration files and api for get authors
